# INSOLE

./: .gitattributes  .gitignore  README.md
project/: .dockerignore  .env.example  .gitignore  Makefile  README.md  alembic.ini  diagnostic_run_2026-05-21.txt  docker-compose.yml  metrics_report_2026-05-21.txt  pyproject.toml  requirements-dev.txt  requirements.txt
project/app/: __init__.py  bootstrap_streams.py  build_exe.py  config.py  main.py
project/app/ui/: __init__.py  main_window.py
project/app/ui/tabs/: __init__.py  classification_tab.py  training_tab.py
project/app/ui/theme/: __init__.py  colors.py  stylesheet.py
project/app/ui/widgets/: __init__.py  image_dropzone.py  log_console.py  measurement_panel.py  results_panel.py
project/app/ui/workers/: __init__.py  inference_worker.py  training_worker.py
project/backend/: __init__.py
project/backend/database/: __init__.py  connection.py  models.py  schema.prisma  schemas.py
project/backend/database/migrations/: env.py
project/backend/database/repositories/: __init__.py  classification_repo.py  patient_repo.py  training_run_repo.py
project/backend/model/: __init__.py  config.py
project/backend/model/architectures/: __init__.py  classifier.py  (+4 more)
project/backend/server/: __init__.py  dependencies.py  main.py  middleware.py
project/docker/: Dockerfile.backend  Dockerfile.trainer  postgres-init.sql
project/scripts/: diagnose_model.py  export_onnx.py  metrics_report.py  predict.py  prepare_data.py  seed_demo_data.py  train.py
project/tests/: test_api.py  test_dataset.py  test_model.py
(+26 files in other folders)
